--- a/css/style.css
+++ b/css/style.css
@@ -277,7 +277,7 @@ button#kirim{
     background-image: url(../assets/smk.jpg);
 }
 
-.portofolio-item#porto-item3{
+.portofolio-item#porto-item3pp{
     background-image: url(../assets/tes.jpg);
 }
 
